# rakuyomi

./: .gitignore  .luacheckrc  .releaserc.yaml  AGENTS.md  CHANGELOG.md  README.md  devenv.nix  flake.nix  mv_frontend.sh  mv_linux.sh  package.json  rust-toolchain.toml
backend/: Cargo.toml  aidoku-sdk.json
backend/.cross/: arm-unknown-linux-musleabi.Dockerfile
backend/cbz_metadata_reader/: Cargo.toml
backend/server/: Cargo.toml
backend/server/assets/: default-settings.json
backend/server/src/: app.rs  build_info.rs  error.rs  jni.rs  lib.rs  listener.rs  main.rs  model.rs  source_extractor.rs  state.rs
backend/server/src/cookie/: routes.rs
backend/server/src/job/: download_chapter.rs  download_scanlator_chapters.rs  download_unread_chapters.rs  dto.rs  mod.rs  refresh_library_chapters.rs  refresh_library_details.rs  routes.rs  state.rs
backend/server/src/manga/: routes.rs
backend/server/src/playlists/: routes.rs
backend/server/src/settings/: routes.rs
backend/server/src/source/: routes.rs
backend/server/src/system/: routes.rs
backend/server/src/update/: mod.rs
backend/shared/: Cargo.toml  dev.db
backend/shared/.sqlx/: query-04dd6031df75e758ed39c1ab4781317c4112f8e43a027249a54fe7585a522a60.json  query-053165dff5fb62ac49ab0f7f88cd7e9587f19ad65828fa52922efe1bb785ca66.json  query-06f2c37f3cce9e5cc11648fb9c6c0add7acdf31bcb036ea9111cdb90b3a691ff.json  query-0818ed573f56ea18652de75c52739903514cb172c9e749f17863a3878c7dcd93.json  query-086216a3e24b162e82c2156066b01c476a2af1f8bd3d76f8091654c58620b01b.json  query-08799e1d430e898274bbf761538727de0a7ba1ff29d8980a08eb82c8c7350c1b.json  query-0984ff2be4e077cab0df4361d35f06dea3fe9acb48ff093353a05c0b08cc2986.json  query-0e9f3d27e26e7293dea2f3c5fa5deafbe6e29e5eeb4045b894bbba725228fc10.json  query-11571ca9f6d875b0c64790a3b257162c0b6365f02e6ea959fdf7969c00b76d87.json  query-154921628631d77282c7dc9118fd140b0c69af6f9460b61211a0080e84bc6795.json  query-15d48b966df02252665f87a060fde49ce175cce69c69ef832e6928a8d331c1d0.json  query-16ebb790e48ced066466701cef2f5ea0835d185a7b1e629c77d88399da0e661a.json  query-1b009b274f19b054b2a66d3e86420d45b42a97a0f6ec663adfeedc055470f3f8.json  query-1c8785f22e9da6b8e30dcd5cab74c1958defac769d8c243fabe91abaf5368637.json  query-1ce382f32f5259f7ae72823566375c4452b55a736030abdb9f97c2e95f7b4a1a.json  query-1cf335aaa128f5ec9cfde31f26b9dc504092a8845d66da5ccf671b7375ce7f8d.json  query-1d64d7000532e7af93bf78e92f2f9fd8806ee906f388719c8ae0993b697fee64.json  query-2021032f642cad80168d8867e9d63b83bf5fedc60abce9e1bf78a4fb1e8491f4.json  query-22e288a7895912c48691562c8390fb2b99e4381b87f9b65c1db5a8170514515c.json  query-274f1effb05c2d3012d4d309c613df665251c952a8b3876226d0ed74e7c6982d.json  query-279f0aa8a066ac9176eaa1f8ee453a866c23eef0657b6aa6f43f5fd7e11fadf8.json  query-281df8866a73180422467b8ff8a7e535a44323f139e343748a180522b99a2fa0.json  query-28533384fb2aacc757b19f19508bc7572a6e42d8bbccb6e180142bba7372825f.json  query-2c1eca0caa106ede9d7d2117552633629097dbf9b98b7fca24d5985252c9a7ee.json  query-2cb1ee12119c31658b69e25bd3d599e9fc8b8ff00313100b80ff39e3dc598738.json  query-2d31d01f4fb8459557c9136fa44ad17c15b533b346d339801c91058ea7976b3c.json  query-2db7ee9690186493ce3d17c05f141cda8cea0bc3ba65dd6dc6689dbcabaee948.json  query-308db44e54dce4bafa503b101876867b01f3ecd60667e01a1348353b1930ac2e.json  query-30bbe2f795d0c4603c6bc9e774477c423c2a78f666b89bc401d0d467d179394b.json  query-3211fe272c55f332f3c0965f22e02673d1e5033f94223d0c7c126a1a35cef90e.json  query-3224d51ceb43c9fc5f5729d0e495ea2cd0364c3b153abf550ed15dd48bdd12bc.json  query-3269befde5a9fe70916dc9b19e74ee3be5ed4c7053c511c273e01b0031e39099.json  query-34ab2eef0733316e66725eb32726b0471484eaeee840ddea1b3ec1c66d70d27e.json  query-367c96dfb812a83694102acbba816d13738b415e503922a55bc72fe27f04d0ad.json  query-37441410bb71308d39c3b15e42f1a346b78d0ae32cf49dce558927c5dffd8c27.json  query-38f8e21d3b000885cfb24293c1d04af288d579c4de2b2b2fa5ae7ff2d5779fa6.json  query-3a10b9f8c412a52eac1f834ecdb002656779a04ec5e7ca09d25e3e02a720e98f.json  query-3b65ab24403739d26869e6cc894394098f0b478839ab13442f54ff4d399d0072.json  query-3cc975f910f44ff7eaa407c7aad8cd7a97bced866ef61abfa2b6872b5dcac914.json  query-3cf8e966342c89a0ef66e20603b0668a642006dcb33a53da3fc8a4c917a6798c.json  (+84 more)
backend/shared/benches/: chapter_downloader_benchmark.rs  search_mangas_benchmark.rs
backend/shared/migrations/: 20251030155900_add_last_read_for_chapter_state.sql  20251031114524_add_primary_key_to_chapter_state.sql  20251122152926_create_manga_details.sql  20251129160813_add_last_updated_chapter_informations.sql  20251130094339_create_table_last_check_update_and_notify.sql  20251221120510_add-fields-chapter-informations.sql  20251229154319_add_field_locked_chapter_informations.sql  20260305005317_create_playlists_table.sql  20260320090000_add_tracking_tables.sql  20260712000000_add_rtl_to_manga_state.sql  20260717095948_add-tracking-table.sql  20260718165510_add-tracking-dates.sql
backend/shared/src/: arima_light.rs  chapter_downloader.rs  chapter_storage.rs  cookie_store.rs  database.rs  lib.rs  model.rs  scraper_ext.rs  source_manager.rs  tls.rs  unscrable_image.rs  util.rs
backend/shared/src/cbz_metadata/: mod.rs
backend/shared/src/settings/: implementation.rs  mod.rs  schema.rs
backend/shared/src/source/: decode_image.rs  html_element.rs  mod.rs  model.rs  next_reader.rs  source_settings.rs  wasm_store.rs
backend/shared/src/tracking/: anilist.rs  bangumi.rs  kavita.rs  komga.rs  mal.rs  mangabaka.rs  mod.rs  myanimelist.rs  shikimori.rs  suwayomi.rs
backend/shared/src/usecases/: add_manga_to_library.rs  add_manga_to_playlist.rs  check_mangas_update.rs  check_update.rs  clear_notifications.rs  create_playlist.rs  delete_notification.rs  delete_playlist.rs  fetch_manga_chapter.rs  fetch_manga_chapters_in_batch.rs  find_orphan_or_read_files.rs  get_cached_manga_chapters.rs  (+37 more)
backend/uds_http_request/: Cargo.toml
backend/uds_http_request/src/: lib.rs  main.rs
backend/wasm_macros/: Cargo.toml
backend/wasm_macros/src/: lib.rs
backend/wasm_shared/: Cargo.toml
backend/wasm_shared/src/: lib.rs
(+244 files in other folders)
