[workspace]
resolver = "2"
members = [
    "shared",
    "server",
    "uds_http_request",
    "wasm_macros",
    "wasm_shared",
    "cbz_metadata_reader"
]

[workspace.dependencies]
wasmi = "0.51.5"

[profile.dev]
incremental = true

[patch.crates-io]
tiff = { git = "https://github.com/image-rs/image-tiff", version = "0.11.3" }
