[workspace]
resolver = "2"
members = [
    "shared",
    "server",
    "uds_http_request",
    "wasm_macros",
    "wasm_shared",
    "cbz_metadata_reader"
]

[workspace.dependencies]
wasmi = "1.0.9"

[profile.dev]
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[patch.crates-io]
tiff = { git = "https://github.com/image-rs/image-tiff", version = "0.11.3" }
