[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
axum-macros = "0.5.1"
clap = { version = "4.6.1", features = ["derive"] }
shared = { path = "../shared" }
futures = "0.3.32"
log = "0.4.30"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.2", features = ["serde", "v4"] }
axum = "0.8.9"
humansize = "2.1.3"
url = "2.5.8"
