[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
# `bin` is used on Linux/Kindle/Kobo/reMarkable. `cdylib` is loaded by
# the Android companion app via JNI. We cannot have `rlib` here because
# `bin` and `lib` with the same name conflict — the `bin` target is
# sourced from `src/main.rs` and the library from `src/lib.rs`.
crate-type = ["lib", "cdylib"]

[[bin]]
name = "server"
path = "src/main.rs"

[features]
ffi = ["dep:serde_bytes", "dep:reqwest", "dep:jni", "shared/ffi"]
api_18 = ["dep:libc"]

[dependencies]
anyhow = "1.0.102"
axum-macros = "0.5.1"
clap = { version = "4.6.1", features = ["derive"] }
shared = { path = "../shared" }
futures = "0.3.32"
log = "0.4.30"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_bytes = { version = "0.11", optional = true }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.2", features = ["serde", "v4"] }
axum = "0.8.9"
humansize = "2.1.3"
url = "2.5.8"
reqwest = { version = "0.12.28", optional = true, default-features = false, features = ["json", "rustls-tls"] }
jni = { version = "0.22", optional = true }
libc = { version = "0.2.186", optional = true }
