[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
# `bin` is used on Linux/Kindle/Kobo/reMarkable. `cdylib` is loaded by
# the Android companion app via JNI. We cannot have `rlib` here because
# `bin` and `lib` with the same name conflict — the `bin` target is
# sourced from `src/main.rs` and the library from `src/lib.rs`.
crate-type = ["lib", "cdylib"]

[[bin]]
name = "server"
path = "src/main.rs"

[features]
default = ["use_nix"]
ffi = ["dep:serde_bytes", "dep:reqwest", "dep:jni", "shared/ffi"]
api_18 = ["dep:libc"]
use_nix = ["dep:nix"]

[dependencies]
anyhow = "1.0.103"
axum-macros = "0.5.1"
clap = { version = "4.6.1", features = ["derive"] }
shared = { path = "../shared" }
futures = "0.3.32"
log = "0.4.33"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_bytes = { version = "0.11", optional = true }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.4", features = ["serde", "v4"] }
axum = "0.8.9"
humansize = "2.1.3"
url = "2.5.8"
reqwest = { version = "0.13.4", optional = true, default-features = false, features = [
  "json",
  "rustls-no-provider",
] }
jni = { version = "0.22", optional = true }
libc = { version = "0.2.186", optional = true }
nix = { version = "0.31.3", features = ["mount", "fs"], optional = true, default-features = false }
size = "0.5.0"
