[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[build-dependencies]
regex = "1.12.2"
schemars = { version = "1.1.0", features = ["url2"] }
size = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
url = { version = "2.5.7", features = ["serde"] }

[features]
default = ["all"]
all = ["sqlx"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = true, features = ["serde"] }
chrono-tz = "0.10.4"
darling = "0.21.3"
num_enum = "0.7.5"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.111", features = ["full"] }
url = { version = "2.5.7", features = ["serde"] }
wasm_macros = { path = "../wasm_macros" }
wasm_shared = { path = "../wasm_shared" }
serde_json = "1.0.145"
ouroboros = "0.18.5"
ego-tree = "0.10.0"
html-escape = "0.2.13"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
semver = "1.0"
zip = { version = "6.0.0", default-features = false, features = ["deflate", "bzip2"] }
serde = { version = "1.0.228", features = ["derive"] }
scopeguard = "1.2.0"
tokio = { version = "1.48.0", features = ["full"] }
wasmi.workspace = true
futures = "0.3.31"
sqlx = { version = "0.8.6", optional = true, features = ["sqlite", "runtime-tokio"] }
thiserror = "2.0.17"
surge-ping = "0.8.3"
async-stream = "0.3.6"
tokio-util = "0.7.17"
tempfile = "3.23.0"
log = "0.4.29"
derive_more = { version = "2.1.0", features = ["from", "try_unwrap", "deref"] }
size = "0.5.0"
walkdir = "2.5.0"
regex = "1.12.2"
schemars = { version = "1.1.0", features = ["url2"] }
pared = { git = "https://github.com/hanatsumi/pared.git", branch = "feat/unwrap-or-clone" }
sanitize-filename = "0.6.0"
serde_json_lenient = "0.2.4"
futures-util = "0.3.31"
sha2 = "0.10"
base64 = "0.22"
epub-builder = { git = "https://github.com/tachibana-shin/epub-builder.git", branch = "main" }
markup5ever = "=0.10.1"
quick-xml = { version = "0.38.4", features = ["serialize"] }
image = "0.25.9"
percent-encoding = "2.3.2"
once_cell = "1.21.3"
postcard = "1.1.3"
aidoku = { git = "https://github.com/Aidoku/aidoku-rs", branch = "main", default-features = false }
raqote = "0.8.5"
font-kit = "0.14.3"
boa_engine = "0.21.0"
imageproc = "0.25.0"
ab_glyph = "0.2.32"
markdown = "1.0.0"
unicode-normalization = "0.1.25"
ordered-float = "5.1.0"
dom_query = { version = "0.24.0", features = ["atomic"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
pprof = { version = "0.15", features = ["criterion", "flamegraph"] }

[[bench]]
name = "chapter_downloader_benchmark"
harness = false

[[bench]]
name = "search_mangas_benchmark"
harness = false
