[package]
name = "uds_http_request"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
http-body-util = "0.1.3"
hyper = { version = "1.8.1" }
hyper-util = "0.1.18"
hyperlocal = "0.9.1"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
