[package]
name = "uds_http_request"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.103"
http-body-util = "0.1.4"
hyper = { version = "1.10.1" }
hyper-util = "0.1.20"
hyperlocal = "0.9.1"
log = "0.4.33"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
