[package]
name = "wasm_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.46"
syn = { version = "2.0.118", features = ["full"] }
wasm_shared = { path = "../wasm_shared" }
wasmi = "1.1.0"

[lib]
proc-macro = true
